objects/ssot__AirTravelEnergyUse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AirTravelEmssnFctrId__c</fullName>
        <label>Air Travel Emissions Factors</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarbonFootprintReportDate__c</fullName>
        <label>Carbon Footprint Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CostCenterName__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationCityName__c</fullName>
        <label>Destination City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationCountry__c</fullName>
        <label>Destination Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Air Travel Energy Use Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3CrbnFtprntId__c</fullName>
        <label>Scope 3 Carbon Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3EmssnSrcId__c</fullName>
        <label>Scope 3 Emissions Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SegmentDistanceNumber__c</fullName>
        <label>Segment Distance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SegmentDistanceUnitId__c</fullName>
        <label>Segment Distance Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceCityName__c</fullName>
        <label>Source City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceCountry__c</fullName>
        <label>Source Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3EmissionsNumber__c</fullName>
        <label>Supl Scope 3 Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierId__c</fullName>
        <label>Supplier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TravelerBaseCityName__c</fullName>
        <label>Traveler base City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TravelerBaseCountry__c</fullName>
        <label>Traveler base country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TravelerName__c</fullName>
        <label>Traveler name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382174451_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AirTravelEnergyUse_AccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>AirTravelEnergyUse_AccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1747382174451_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382178838_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AirTravelEnergyUse_AirTravelEmssnFct_rel</label>
        <referenceTo>ssot__AirTravelEmissionsFactor__dlm</referenceTo>
        <relationshipLabel>AirTravelEnergyUse_AirTravelEmssnFct_rel</relationshipLabel>
        <relationshipName>rel_1747382178838_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382180144_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AirTravelEnergyUse_Scope3CrbnFtprntI_rel</label>
        <referenceTo>ssot__Scope3CarbonFootprint__dlm</referenceTo>
        <relationshipLabel>AirTravelEnergyUse_Scope3CrbnFtprntI_rel</relationshipLabel>
        <relationshipName>rel_1747382180144_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>